--- a/learn-the-basics/variables-and-types/Makefile
+++ b/learn-the-basics/variables-and-types/Makefile
@@ -1,8 +1,20 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: integer
+integer:
+	./integer.sh &> integer.console
+
+.PHONY: float
+float:
+	./float.sh &> float.console
+
+.PHONY: string
+string:
+	./string.sh &> string.console
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: exercise
+all: integer float string exercise
