--- a/learn-the-basics/hello-world/Makefile
+++ b/learn-the-basics/hello-world/Makefile
@@ -1,12 +1,12 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: print
+print:
+	./print.sh &> print.console
+
 .PHONY: indentation
 indentation:
 	./indentation.sh &> indentation.console
 
-.PHONY: exercise
-exercise:
-	./exercise.sh &> exercise.console
-
 .PHONY: all
-all: indentation exercise
+all: print indentation
