--- a/learn-the-basics/variables-and-types/Makefile
+++ b/learn-the-basics/variables-and-types/Makefile
@@ -12,9 +12,13 @@ float:
 string:
 	./string.sh &> string.console
 
+.PHONY: simple-operators
+simple-operators:
+	./simple_operators.sh &> simple_operators.console
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: integer float string exercise
+all: integer float string simple-operators exercise
