--- a/learn-the-basics/variables-and-types/Makefile
+++ b/learn-the-basics/variables-and-types/Makefile
@@ -16,9 +16,13 @@ string:
 simple-operators:
 	./simple_operators.sh &> simple_operators.console
 
+.PHONY: unsupported-operators
+unsupported-operators:
+	./unsupported_operators.sh &> unsupported_operators.console || true
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: integer float string simple-operators exercise
+all: integer float string simple-operators unsupported-operators exercise
