--- a/scripts/.pylintrc
+++ b/scripts/.pylintrc
@@ -1,4 +1,5 @@
 [MASTER]
 
 disable=
+    R, C,  # Show ERROR and WARNING messages only
     C0114, # Missing module docstring (missing-module-docstring)
