--- a/scripts/.pylintrc
+++ b/scripts/.pylintrc
@@ -1,5 +1,10 @@
 [MASTER]
 
 disable=
-    R, C,  # Show ERROR and WARNING messages only
     C0114, # Missing module docstring (missing-module-docstring)
+
+
+[MESSAGES CONTROL]
+
+disable=
+    R, C,  # Show ERROR and WARNING messages only
