--- a/scripts/.pylintrc
+++ b/scripts/.pylintrc
@@ -2,3 +2,9 @@
 
 disable=
     C0114, # Missing module docstring (missing-module-docstring)
+
+
+[MESSAGES CONTROL]
+
+disable=
+    R, C,  # Show ERROR and WARNING messages only
