--- a/python-development-setup/Makefile
+++ b/python-development-setup/Makefile
@@ -4,5 +4,9 @@ export PATH := ../../venv/bin:$(PATH)
 pyenv:
 	./pyenv.sh &> pyenv.console
 
+.PHONY: virtualenv
+virtualenv:
+	./virtualenv.sh &> virtualenv.console
+
 .PHONY: all
-all: pyenv
+all: pyenv virtualenv
