--- a/learn-the-basics/lists/Makefile
+++ b/learn-the-basics/lists/Makefile
@@ -1,4 +1,12 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: list
+list:
+	./list.sh &> list.console
+
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: list exercise
