--- a/learn-the-basics/lists/Makefile
+++ b/learn-the-basics/lists/Makefile
@@ -4,9 +4,13 @@ export PATH := ../../venv/bin:$(PATH)
 list:
 	./list.sh &> list.console
 
+.PHONY: list-exception
+list-exception:
+	./list_exception.sh &> list_exception.console || true
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: list exercise
+all: list list-exception exercise
