--- a/learn-the-basics/lists/Makefile
+++ b/learn-the-basics/lists/Makefile
@@ -1,4 +1,16 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: list
+list:
+	./list.sh &> list.console
+
+.PHONY: list-exception
+list-exception:
+	./list_exception.sh &> list_exception.console || true
+
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: list list-exception exercise
