print formatted strings

--- a/learn-the-basics/string-formatting/Makefile
+++ b/learn-the-basics/string-formatting/Makefile
@@ -1,4 +1,8 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: print-formatted-strings
+print-formatted-strings:
+	./print_formatted_strings.sh &> print_formatted_strings.console
+
 .PHONY: all
-all:
+all: print-formatted-strings
