--- a/learn-the-basics/string-formatting/Makefile
+++ b/learn-the-basics/string-formatting/Makefile
@@ -4,5 +4,9 @@ export PATH := ../../venv/bin:$(PATH)
 print-formatted-strings:
 	./print_formatted_strings.sh &> print_formatted_strings.console
 
+.PHONY: print-formatted-object
+print-formatted-object:
+	./print_formatted_object.sh &> print_formatted_object.console
+
 .PHONY: all
-all: print-formatted-strings
+all: print-formatted-strings print-formatted-object
