--- a/learn-the-basics/basic-string-operations/Makefile
+++ b/learn-the-basics/basic-string-operations/Makefile
@@ -1,4 +1,16 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: print-sentence
+print-sentence:
+	./print_sentence.sh &> print_sentence.console
+
+.PHONY: string-index
+string-index:
+	./string_index.sh &> string_index.console
+
+.PHONY: string-count
+string_count:
+	./string_count.sh &> string_count.console
+
 .PHONY: all
-all:
+all: print-sentence string-index string_count
