--- a/learn-the-basics/basic-string-operations/Makefile
+++ b/learn-the-basics/basic-string-operations/Makefile
@@ -9,8 +9,12 @@ string-index:
 	./string_index.sh &> string_index.console
 
 .PHONY: string-count
-string_count:
+string-count:
 	./string_count.sh &> string_count.console
 
+.PHONY: string-slice
+string-slice:
+	./string_slice.sh &> string_slice.console
+
 .PHONY: all
-all: print-sentence string-index string_count
+all: print-sentence string-index string-count string-slice
