--- a/learn-the-basics/string-formatting/Makefile
+++ b/learn-the-basics/string-formatting/Makefile
@@ -1,4 +1,16 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: print-formatted-strings
+print-formatted-strings:
+	./print_formatted_strings.sh &> print_formatted_strings.console
+
+.PHONY: print-formatted-object
+print-formatted-object:
+	./print_formatted_object.sh &> print_formatted_object.console
+
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: print-formatted-strings print-formatted-object exercise
