--- a/learn-the-basics/conditions/Makefile
+++ b/learn-the-basics/conditions/Makefile
@@ -1,5 +1,9 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: boolean-expression
+boolean-expression:
+	./boolean_expression.sh &> boolean_expression.console
+
 .PHONY: boolean-operators
 boolean-operators:
 	./boolean_operators.sh &> boolean_operators.console
@@ -7,6 +11,10 @@ boolean-operators:
 .PHONY: in-operator
 in-operator:
 	./in_operator.sh &> in_operator.console
+
+.PHONY: if-statement
+if-statement:
+	./if_statement.sh &> if_statement.console
 
 .PHONY: is-operator
 is-operator:
@@ -21,4 +29,4 @@ exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: boolean-operators in-operator is-operator not-operator exercise
+all: boolean-expression boolean-operators in-operator if-statement is-operator not-operator exercise
