--- a/python-development-setup/Makefile
+++ b/python-development-setup/Makefile
@@ -5,6 +5,8 @@ pyenv:
 .PHONY: virtualenv
 virtualenv:
 	./virtualenv.sh &> virtualenv.console
+	# avoid output changes each time, mark it?
+	# Output is likely to change
 
 .PHONY: all
 all: pyenv virtualenv
