--- a/python-development-setup/Makefile
+++ b/python-development-setup/Makefile
@@ -4,7 +4,7 @@ pyenv:
 
 .PHONY: virtualenv
 virtualenv:
-	./virtualenv.sh &> virtualenv.console
+	# ./virtualenv.sh &> virtualenv.console
 	# avoid output changes each time, mark it?
 	# Output is likely to change
 
