--- a/python-development-setup/Makefile
+++ b/python-development-setup/Makefile
@@ -4,9 +4,8 @@ pyenv:
 
 .PHONY: virtualenv
 virtualenv:
+	# Notice: the output is likely to change
 	# ./virtualenv.sh &> virtualenv.console
-	# avoid output changes each time, mark it?
-	# Output is likely to change
 
 .PHONY: all
 all: pyenv virtualenv
