--- a/learn-the-basics/modules-and-packages/Makefile
+++ b/learn-the-basics/modules-and-packages/Makefile
@@ -1,4 +1,8 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: exercise
