--- a/learn-the-basics/classes-and-objects/Makefile
+++ b/learn-the-basics/classes-and-objects/Makefile
@@ -2,7 +2,7 @@ export PATH := ../../venv/bin:$(PATH)
 
 .PHONY: exercise
 exercise:
-	./exercise.sh &> exercise.console
+	# ./exercise.sh &> exercise.console
 
 .PHONY: all
 all: exercise
