--- a/learn-the-basics/classes-and-objects/Makefile
+++ b/learn-the-basics/classes-and-objects/Makefile
@@ -1,8 +1,16 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: access-object-variable
+access-object-variable:
+	./access_object_variable.sh &> access_object_variable.console
+
+.PHONY: access-object-function
+access-object-function:
+	./access_object_function.sh &> access_object_function.console
+
 .PHONY: exercise
 exercise:
-	# ./exercise.sh &> exercise.console
+	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: exercise
+all: access-object-variable access-object-function exercise
