--- a/learn-the-basics/dictionaries/Makefile
+++ b/learn-the-basics/dictionaries/Makefile
@@ -1,8 +1,16 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: iteration
+iteration:
+	./iteration.sh &> iteration.console
+
+.PHONY: remove
+remove:
+	./remove.sh &> remove.console
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: exercise
+all: iteration remove exercise
