--- a/learn-the-basics/classes-and-objects/Makefile
+++ b/learn-the-basics/classes-and-objects/Makefile
@@ -1,5 +1,9 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: class-and-object
+class-and-object:
+	./class_and_object.sh &> class_and_object.console
+
 .PHONY: access-object-variable
 access-object-variable:
 	./access_object_variable.sh &> access_object_variable.console
@@ -13,4 +17,4 @@ exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: access-object-variable access-object-function exercise
+all: class-and-object access-object-variable access-object-function exercise
