--- a/scripts/.pylintrc
+++ b/scripts/.pylintrc
@@ -5,3 +5,9 @@
 
 disable=
     C0114, # Missing module docstring (missing-module-docstring)
+
+
+# learn-the-basics/classes-and-objects/class_and_object.py:1:0: C0115: Missing class docstring (missing-class-docstring)
+# learn-the-basics/classes-and-objects/class_and_object.py:4:4: C0116: Missing function or method docstring (missing-function-docstring)
+# learn-the-basics/classes-and-objects/class_and_object.py:4:4: R0201: Method could be a function (no-self-use)
+# learn-the-basics/classes-and-objects/class_and_object.py:1:0: R0903: Too few public methods (1/2) (too-few-public-methods)
