--- a/learn-the-basics/modules-and-packages/Makefile
+++ b/learn-the-basics/modules-and-packages/Makefile
@@ -1,8 +1,12 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: my-game
+my-game:
+	./my_game.sh &> my_game.console
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: exercise
+all: my-game exercise
