--- a/scripts/.pylintrc
+++ b/scripts/.pylintrc
@@ -10,5 +10,9 @@ disable=
 
 # learn-the-basics/classes-and-objects/class_and_object.py:4:4: R0201: Method could be a function (no-self-use)
 # learn-the-basics/classes-and-objects/class_and_object.py:1:0: R0903: Too few public methods (1/2) (too-few-public-methods)
+
 # learn-the-basics/classes-and-objects/access_object_function.py:4:4: R0201: Method could be a function (no-self-use)
 # learn-the-basics/classes-and-objects/access_object_function.py:1:0: R0903: Too few public methods (1/2) (too-few-public-methods)
+
+# learn-the-basics/modules-and-packages/my_game/draw.py:8:17: W0613: Unused argument 'screen' (unused-argument)
+# learn-the-basics/modules-and-packages/my_game/game.py:13:4: E1121: Too many positional arguments for function call (too-many-function-args)
