--- a/learn-the-basics/modules-and-packages/Makefile
+++ b/learn-the-basics/modules-and-packages/Makefile
@@ -4,9 +4,13 @@ export PATH := ../../venv/bin:$(PATH)
 my-game:
 	./my_game.sh &> my_game.console
 
+.PHONY: import-module-objects
+import-module-objects:
+	./import_module_objects.sh &> import_module_objects.console
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: my-game exercise
+all: my-game import-module-objects exercise
