import all module objects

--- a/learn-the-basics/modules-and-packages/Makefile
+++ b/learn-the-basics/modules-and-packages/Makefile
@@ -8,9 +8,13 @@ my-game:
 import-module-objects:
 	./import_module_objects.sh &> import_module_objects.console
 
+.PHONY: import-all-module-objects
+import-all-module-objects:
+	./import_all_module_objects.sh &> import_all_module_objects.console
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: my-game import-module-objects exercise
+all: my-game import-module-objects import-all-module-objects exercise
