--- a/scripts/.pylintrc
+++ b/scripts/.pylintrc
@@ -16,3 +16,6 @@ disable=
 
 # learn-the-basics/modules-and-packages/my_game/draw.py:8:17: W0613: Unused argument 'screen' (unused-argument)
 # learn-the-basics/modules-and-packages/my_game/game.py:13:4: E1121: Too many positional arguments for function call (too-many-function-args)
+
+# learn-the-basics/modules-and-packages/import-all-module-objects/game.py:4:1: F403 'from draw import *' used; unable to detect undefined names
+# learn-the-basics/modules-and-packages/import-all-module-objects/game.py:13:5: F405 'draw_game' may be undefined, or defined from star imports: draw
