--- a/learn-the-basics/dictionaries/Makefile
+++ b/learn-the-basics/dictionaries/Makefile
@@ -1,4 +1,20 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: initialization
+initialization:
+	./initialization.sh &> initialization.console
+
+.PHONY: iteration
+iteration:
+	./iteration.sh &> iteration.console
+
+.PHONY: remove
+remove:
+	./remove.sh &> remove.console
+
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: initialization iteration remove exercise
