--- a/learn-the-basics/functions/Makefile
+++ b/learn-the-basics/functions/Makefile
@@ -1,4 +1,16 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: write-functions
+write-functions:
+	./write_functions.sh
+
+.PHONY: call-functions
+call-functions:
+	./call_functions.sh &> call_functions.console
+
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: write-functions call-functions exercise
