--- a/scripts/.pylintrc
+++ b/scripts/.pylintrc
@@ -4,4 +4,18 @@
 [MASTER]
 
 disable=
-    C0114, # Missing module docstring (missing-module-docstring)
+    C0114,  # Missing module docstring (missing-module-docstring)
+    C0115,  # Missing class docstring (missing-class-docstring)
+    C0116,  # Missing function or method docstring (missing-function-docstring)
+
+# learn-the-basics/classes-and-objects/class_and_object.py:4:4: R0201: Method could be a function (no-self-use)
+# learn-the-basics/classes-and-objects/class_and_object.py:1:0: R0903: Too few public methods (1/2) (too-few-public-methods)
+
+# learn-the-basics/classes-and-objects/access_object_function.py:4:4: R0201: Method could be a function (no-self-use)
+# learn-the-basics/classes-and-objects/access_object_function.py:1:0: R0903: Too few public methods (1/2) (too-few-public-methods)
+
+# learn-the-basics/modules-and-packages/my_game/draw.py:8:17: W0613: Unused argument 'screen' (unused-argument)
+# learn-the-basics/modules-and-packages/my_game/game.py:13:4: E1121: Too many positional arguments for function call (too-many-function-args)
+
+# learn-the-basics/modules-and-packages/import-all-module-objects/game.py:4:1: F403 'from draw import *' used; unable to detect undefined names
+# learn-the-basics/modules-and-packages/import-all-module-objects/game.py:13:5: F405 'draw_game' may be undefined, or defined from star imports: draw
