--- a/name-variable/Makefile
+++ b/name-variable/Makefile
@@ -10,7 +10,8 @@ scenario-1:
 
 .PHONY: scenario-2
 scenario-2:
-	cd labs/scenario-2
+	cd labs/scenario-2 \
+	&& cp ../scenario-1/name_script.py .
 
 .PHONY: all
 all: introduction scenario-1 scenario-2
