--- a/learn-the-basics/modules-and-packages/Makefile
+++ b/learn-the-basics/modules-and-packages/Makefile
@@ -24,6 +24,10 @@ initialize-module:
 extend-module-search-path:
 	./extend_module_search_path.sh &> extend_module_search_path.console
 
+.PHONY: append-module-search-path
+append-module-search-path:
+	./append_module_search_path.sh &> append_module_search_path.console
+
 .PHONY: explore-built-in-urllib
 explore-built-in-urllib:
 	# Notice: the output is too long and likely to change
@@ -38,4 +42,4 @@ exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: ping-pong-game import-module-objects import-all-module-objects customize-import-name initialize-module extend-module-search-path explore-built-in-urllib write-package exercise
+all: ping-pong-game import-module-objects import-all-module-objects customize-import-name initialize-module extend-module-search-path append-module-search-path explore-built-in-urllib write-package exercise
