--- a/data-science/numpy-arrays/Makefile
+++ b/data-science/numpy-arrays/Makefile
@@ -1,4 +1,12 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: getting-started
+getting-started:
+	./getting_started.sh &> getting_started.console
+
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: getting-started exercise
