--- a/data-science/numpy-arrays/Makefile
+++ b/data-science/numpy-arrays/Makefile
@@ -4,9 +4,13 @@ export PATH := ../../venv/bin:$(PATH)
 getting-started:
 	./getting_started.sh &> getting_started.console
 
+.PHONY: calculate-bmi
+calculate-bmi:
+	./calculate_bmi.sh &> calculate_bmi.console
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: getting-started exercise
+all: getting-started calculate-bmi exercise
