--- a/data-science/pandas-basics/Makefile
+++ b/data-science/pandas-basics/Makefile
@@ -1,4 +1,12 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: create-dataframe
+create-dataframe:
+	./create_dataframe.sh &> create_dataframe.console
+
+.PHONY: index-dataframe
+index-dataframe:
+	./index_dataframe.sh &> index_dataframe.console
+
 .PHONY: all
-all:
+all: create-dataframe index-dataframe
