--- a/data-science/pandas-basics/Makefile
+++ b/data-science/pandas-basics/Makefile
@@ -4,9 +4,13 @@ export PATH := ../../venv/bin:$(PATH)
 create-dataframe:
 	./create_dataframe.sh &> create_dataframe.console
 
+.PHONY: read-csv
+read-csv:
+	./read_csv.sh &> read_csv.console
+
 .PHONY: index-dataframe
 index-dataframe:
 	./index_dataframe.sh &> index_dataframe.console
 
 .PHONY: all
-all: create-dataframe index-dataframe
+all: create-dataframe read-csv index-dataframe
