--- a/data-science/pandas-basics/Makefile
+++ b/data-science/pandas-basics/Makefile
@@ -4,6 +4,10 @@ export PATH := ../../venv/bin:$(PATH)
 create-dataframe:
 	./create_dataframe.sh &> create_dataframe.console
 
+.PHONY: set-index
+set-index:
+	./set_index.sh &> set_index.console
+
 .PHONY: read-csv
 read-csv:
 	./read_csv.sh &> read_csv.console
@@ -13,4 +17,4 @@ index-dataframe:
 	./index_dataframe.sh &> index_dataframe.console
 
 .PHONY: all
-all: create-dataframe read-csv index-dataframe
+all: create-dataframe set-index read-csv index-dataframe
