--- a/advanced-tutorials/closures/Makefile
+++ b/advanced-tutorials/closures/Makefile
@@ -2,3 +2,11 @@ export PATH := ../../venv/bin:$(PATH)
 
 .PHONY: all
 all:
+
+.PHONY: git-add
+git-add: all
+	@printf "\n"
+	$(MAKEFILE_SCRIPT_PATH)/fmt-markdown.sh
+
+	@printf "\n"
+	git add --all .
